Improve flow for multiple tabs, fixed scrollbar alignment

--- a/app/assets/stylesheets/textlab/document-tree-view.scss
+++ b/app/assets/stylesheets/textlab/document-tree-view.scss
@@ -11,7 +11,7 @@
   #tree-container {
     padding: 5px;
     overflow-y: scroll;
-    width: 95%;
+    width: 100%;;
   }
 
 }
